--- a/responsive/index.html
+++ b/responsive/index.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="respo.css" />
+    <title>cite</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Firstfood</h1>
+      <nav>
+        <ul>
+          <li>menu</li>
+          <li>contact</li>
+          <li>about me</li>
+          <li>other</li>
+        </ul>
+      </nav>
+    </header>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eius
+      est omnis mollitia laborum? Quasi officiis omnis velit autem, nemo ut
+      corrupti ullam minima quo, sint, asperiores id reprehenderit aspernatur!
+    </p>
+  </body>
 </html>
