--- a/responsive/index.html
+++ b/responsive/index.html
@@ -1,28 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="respo.css" />
-    <title>cite</title>
-  </head>
-  <body>
-    <header>
-      <h1>Firstfood</h1>
-      <nav>
-        <ul>
-          <li>menu</li>
-          <li>contact</li>
-          <li>about me</li>
-          <li>other</li>
-        </ul>
-      </nav>
-    </header>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eius
-      est omnis mollitia laborum? Quasi officiis omnis velit autem, nemo ut
-      corrupti ullam minima quo, sint, asperiores id reprehenderit aspernatur!
-    </p>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="respo.css" />
+  <title>cite</title>
+</head>
+
+<body>
+  <h1>IMAGES</h1>
+  <div class="main">
+    <div class="left">
+      <div class="box"><img src="https://www.akamai.com/site/im-demo/perceptual-standard.jpg?imbypass=true" alt=""></div>
+      <div class="box"><img src="https://www.akamai.com/site/im-demo/perceptual-standard.jpg?imbypass=true" alt=""></div>
+      <div class="box"><img src="https://www.akamai.com/site/im-demo/perceptual-standard.jpg?imbypass=true" alt=""></div>
+    </div>
+    <div class="left">
+      <div class="box"><img src="https://www.akamai.com/site/im-demo/perceptual-standard.jpg?imbypass=true" alt=""></div>
+      <div class="box"><img src="https://www.akamai.com/site/im-demo/perceptual-standard.jpg?imbypass=true" alt=""></div>
+      <div class="box"><img src="https://www.akamai.com/site/im-demo/perceptual-standard.jpg?imbypass=true" alt=""></div>
+    </div>
+  </div>
+  <div class="body">
+    <div class="ca">
+      <div class="card">
+        <img src="https://www.w3schools.com/css/img_5terre_wide.jpg" alt="">
+      <div class="text">
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit</h2>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita quibusdam nobis, voluptate quidem, fuga ipsa, ab esse eum </p>
+      </div>
+      </div>
+      <div class="card">
+        <img src="https://www.w3schools.com/css/img_5terre_wide.jpg" alt="">
+      <div class="text">
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit</h2>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita quibusdam nobis, voluptate quidem, fuga ipsa, ab esse eum </p>
+      </div>
+      </div>
+      <div class="card">
+        <img src="https://www.w3schools.com/css/img_5terre_wide.jpg" alt="">
+      <div class="text">
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit</h2>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita quibusdam nobis, voluptate quidem, fuga ipsa, ab esse eum </p>
+      </div>
+      </div>
+      <div class="card">
+        <img src="https://www.w3schools.com/css/img_5terre_wide.jpg" alt="">
+      <div class="text">
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit</h2>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita quibusdam nobis, voluptate quidem, fuga ipsa, ab esse eum </p>
+      </div>
+      </div>
+      
+      
+    </div>
+    <div class="foot">
+      <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo soluta distinctio, temporibus alias numquam nihil vitae recusandae quibusdam corrupti! Vel nesciunt laborum consequuntur voluptate minima maiores iste quasi accusamus qui. Lorem ipsum dolor sit amet consectetur adipisicing elit. Et necessitatibus commodi cupiditate accusantium ipsa, voluptatibus eius veniam, doloribus neque rerum tenetur quam asperiores, molestias cum quaerat ea ducimus vitae expedita!</p>
+    </div>
+  </div>
+</body>
+
 </html>
