--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -15,7 +15,7 @@
   <body>
     
     <div class="container">
-      <div class="row bg-light">
+      <div class="row bg-light h2 m-0 p-0">
         <div class="col-6 row bg-success h-50">
             <div class="row">
                 <div class="col">
