--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -13,40 +13,30 @@
     <title>Document</title>
   </head>
   <body>
-    
     <div class="container">
-      <div class="row bg-light h2 m-0 p-0">
-        <div class="col-6 row bg-success h-50">
-            <div class="row">
-                <div class="col">
-                    <div class="row bg-danger">1</div>
-                    <div class="row bg-dark">2</div>
-                </div>
-                <div class="col bg-warning">3</div>
-            </div>
-            <div class="row">
-                <div class="col bg-primary">4</div>
-                <div class="col">
-                    <div class="row">
-                        <div class="col">12</div>
-                        <div class="col bg-light">13</div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 bg-danger">5</div>
-            </div>
-        </div>
-        <div class="col-4 bg-danger"></div>
-        <div class="col-2 bg-light">
-            <div class="col bg-dark">6</div>
-            <div class="col bg-light">7</div>
-            <div class="col bg-primary">8</div>
-            <div class="col bg-warning">9</div>
-          </div>
-        </div>
+      <div class="row">
+        <div class="col-sm-4 bg-primary">4</div>
+        <div class="col-sm-4 bg-info">4</div>
+        <div class="col-sm-4 bg-success">4</div>
+      </div>
+      <div class="row">
+        <div class="col-sm-4 col-md-4 bg-warning">3</div>
+        <div class="col-sm-4 col-md-4 bg-success">3</div>
+        <div class="col-sm-4 col-md-4 bg-info">3</div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm bg-primary">2</div>
+        <div class="col-sm bg-danger">2</div>
+        <div class="col-sm bg-success">2</div>
+      </div>
+      <div class="row">
+        <div class="col-sm-2 bg-warning">1</div>
+        <div class="col-sm-8 bg-success">1</div>
+        <div class="col-sm-2 bg-info">1</div>
       </div>
     </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
