--- a/bootsrap-last/index.html
+++ b/bootsrap-last/index.html
@@ -89,7 +89,7 @@
               </li>
             </ul>
           </div>
-          <form class="d-flex" role="search">
+          <form class="d-none d-sm-flex" role="search">
             <input
               class="form-control me-3"
               type="search"
@@ -107,6 +107,8 @@
         </div>
       </nav>
     </header>
+
+
     <!-- main style -->
     <main style="padding-top: 100px">
       <div class="first section row mt-5">
@@ -159,7 +161,7 @@
                 <img
                   src="https://stat.mobicom.mn/resources/content/mobicom.mn banner iPhone 14 1250x600-2022-10-27-164501-2025326689.png"
                   class="d-block w-100"
-                  style="max-height: 800px; min-height: 600px;"
+                  style="height: 400px;"
                   alt="..."
                 />
               </div>
@@ -455,7 +457,7 @@
                       class="d-block w-100 rounded-top"
                       alt="..."
                     />
-                    <h4 class="p-3 rounded-bottom border">Buy samsung galaxy</h4>
+                    <h4 class="p-3 rounded-bottom border">Buy nokio</h4>
                     </a>
                   </div>
                   <div class="carousel-item" data-bs-interval="2000">
@@ -465,7 +467,7 @@
                       class="d-block w-100 rounded-top"
                       alt="..."
                     />
-                    <h4 class="p-3 rounded-bottom border">Buy samsung </h4>
+                    <h4 class="p-3 rounded-bottom border">Nokio sell </h4>
                     </a>
                   </div>
                   <div class="carousel-item">
@@ -475,7 +477,7 @@
                       class="d-block w-100 rounded-top"
                       alt="..."
                     />
-                    <h4 class="p-3 rounded-bottom border">Buy samsung s7</h4>
+                    <h4 class="p-3 rounded-bottom border">Buy samsung nokio</h4>
                     </a>
                   </div>
                 </div>
@@ -517,7 +519,7 @@
           <div class="col-lg-3 col-12">
             <div class="py-3">
               <img
-                src="https://www.imgacademy.com/themes/custom/imgacademy/images/helpbox-contact.jpg"
+                src="https://img-19.commentcamarche.net/cI8qqj-finfDcmx6jMK6Vr-krEw=/1500x/smart/b829396acc244fd484c5ddcdcb2b08f3/ccmcms-commentcamarche/20494859.jpg"
                 class="card-img-top"
                 alt="..."
               />
@@ -533,7 +535,7 @@
           <div class="col-lg-3 col-12">
             <div class="py-3">
               <img
-                src="https://www.imgacademy.com/themes/custom/imgacademy/images/helpbox-contact.jpg"
+                src="https://img-19.commentcamarche.net/cI8qqj-finfDcmx6jMK6Vr-krEw=/1500x/smart/b829396acc244fd484c5ddcdcb2b08f3/ccmcms-commentcamarche/20494859.jpg"
                 class="card-img-top"
                 alt="..."
               />
@@ -549,7 +551,7 @@
           <div class="col-lg-3 col-12">
             <div class="py-3">
               <img
-                src="https://www.imgacademy.com/themes/custom/imgacademy/images/helpbox-contact.jpg"
+                src="https://img-19.commentcamarche.net/cI8qqj-finfDcmx6jMK6Vr-krEw=/1500x/smart/b829396acc244fd484c5ddcdcb2b08f3/ccmcms-commentcamarche/20494859.jpg"
                 class="card-img-top"
                 alt="..."
               />
@@ -565,7 +567,7 @@
           <div class="col-lg-3 col-12">
             <div class="py-3">
               <img
-                src="https://www.imgacademy.com/themes/custom/imgacademy/images/helpbox-contact.jpg"
+                src="https://img-19.commentcamarche.net/cI8qqj-finfDcmx6jMK6Vr-krEw=/1500x/smart/b829396acc244fd484c5ddcdcb2b08f3/ccmcms-commentcamarche/20494859.jpg"
                 class="card-img-top"
                 alt="..."
               />
@@ -583,7 +585,7 @@
           <div class="col-12 col-lg-6">
             <div class="p-3">
               <img
-                src="https://www.imgacademy.com/themes/custom/imgacademy/images/helpbox-contact.jpg"
+                src="https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg"
                 class="card-img-top"
                 alt="..."
               />
@@ -599,7 +601,7 @@
           <div class="col-12 col-lg-6">
             <div class="p-3">
               <img
-                src="https://www.imgacademy.com/themes/custom/imgacademy/images/helpbox-contact.jpg"
+                src="https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg"
                 class="card-img-top"
                 alt="..."
               />
@@ -653,6 +655,8 @@
       </div>
     </main>
     <!-- main style end -->
+
+
     <!-- desktop and tablet footer -->
     <footer class="container-fluid bg-secondary mt-5 pt-5 pb-5 d-none d-sm-block">
       <div class="container">
@@ -716,6 +720,8 @@
       </div>
     </footer>
     <!-- desktop and tablet footer end -->
+
+
     <!-- phone -->
     <footer class="phone bg-secondary mt-5 d-block d-sm-none">
       <div class="accordion accordion-flush " id="accordionFlushExample">
@@ -773,6 +779,7 @@
       <div class="text-center pb-5 pt-5">© 1996 - 2022 MOBICOM CORPORATION</div>
     </footer>
     <!-- phone footer end -->
+    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
