--- a/JS/DOM/index.html
+++ b/JS/DOM/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="rr"></div>
+    <script src="chess.js"></script>
     <script src="clock.js"></script>
   </body>
 </html>
