--- a/JS/BOM/Random/index.html
+++ b/JS/BOM/Random/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <div id="score"></div>
     <div id="root"></div>
     <script src="index.js"></script>
   </body>
