--- a/JS/DOM Project/index.html
+++ b/JS/DOM Project/index.html
@@ -7,10 +7,11 @@
     <title>Document</title>
   </head>
   <body>
-      <div id="first"></div>
-      <div id="clock"></div>
-      <div id="textTitle"></div>
-      <input id="input"></input>
+    <div id="first"></div>
+    <div id="clock"></div>
+    <div id="textTitle"></div>
+    <input id="input" />
+    <button id="button">add</button>
     <script src="first.js"></script>
   </body>
 </html>
