--- a/JS/DOM Project/index.html
+++ b/JS/DOM Project/index.html
@@ -5,13 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      h2 {
+        font-size: 40px;
+        text-align: center;
+        color: rgb(245, 245,245);
+        border-bottom: 5px solid rgb(245, 245,245);
+        width: 500px;
+        margin: 50px auto;
+      }
+      .click{
+        background-color: rgb(250,240,230);
+        width: 475px;
+        height: 25px;
+        padding: 15px;
+        margin: 5px auto;
+        border-radius: 2px;
+        border: 1px solid rgb(255, 230, 0);
+        color: #001f24;
+        font-size: 20px;
+      }
+      .imageInput{
+        width: 350px;
+        height: 25px;
+        background-color: rgb(250,240,230);
+        border: 0;
+        font-size: 18px;
+        color: #001f24;
+      }
+      a{
+        cursor: pointer;
+        text-decoration: none;
+        color: white;
+      }
+      a:active{
+        color: #001f24;
+      }
+      .image{
+        width: 20px;
+        float: right;
+        margin-left: 15px;
+        cursor: pointer;
+        display: flex;
+      }
+    </style>
   </head>
   <body>
-    <div id="first"></div>
-    <div id="clock"></div>
-    <div id="textTitle"></div>
-    <input id="input" />
-    <button id="button">add</button>
+      <div id="first"></div>
+      <div id="clock"></div>
+      <div id="textTitle"></div>
+      <div class="div">
+        <input placeholder="Таскын нэрээ оруулна уу " class="input"></input>
+        <div id="btn"><a>+Add</a></div>
+      </div>
+      <h2>Жагсаалт</h2>
     <script src="first.js"></script>
   </body>
 </html>
