--- a/JS/Async await/class/index.html
+++ b/JS/Async await/class/index.html
@@ -5,11 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="score"></div>
-    <div class="root"></div>
-    <script src="index.js"></script>
+    <script src="asyncFunction.js"></script>
   </body>
 </html>
