--- a/JS/DOM Project/index.html
+++ b/JS/DOM Project/index.html
@@ -8,14 +8,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-      <div id="first"></div>
-      <div id="clock"></div>
-      <div id="textTitle"></div>
-      <div class="div">
+    <h1 id="textTitle"></h1>
+    <p id="clock"></p>
+    <div class="div">
         <input placeholder="Таскын нэрээ оруулна уу " class="input"></input>
         <div id="btn"><a>+Add</a></div>
-      </div>
-      <h2>Жагсаалт</h2>
+    </div>
+    <h2>Жагсаалт</h2>
     <script src="first.js"></script>
   </body>
 </html>
