--- a/JS/express-crud/screen/test.html
+++ b/JS/express-crud/screen/test.html
@@ -17,6 +17,8 @@
     <button class="toyota">Toyota cars</button>
     <button class="lexus">Lexus cars</button>
     <div id="root"></div>
+    <select class="select"></select>
+    <div class="carImage"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
